--- a/telas/vendedor-principal/base.html
+++ b/telas/vendedor-principal/base.html
@@ -4,13 +4,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./toaki-componentes-css/css/global.css">
-  <link rel="stylesheet" href="./toaki-componentes-css/css/botoes.css">
-  <link rel="stylesheet" href="./toaki-componentes-css/css/cards.css">
-  <link rel="stylesheet" href="./toaki-componentes-css/css/imagem.css">
-  <link rel="stylesheet" href="./toaki-componentes-css/css/icones.css">
-  <link rel="stylesheet" href="./toaki-componentes-css/css/inputs.css">
-  <link rel="stylesheet" href="./toaki-componentes-css/css/navbar.css">
+  <link rel="stylesheet" href="../../toaki-componentes-css/css/global.css">
+  <link rel="stylesheet" href="../../toaki-componentes-css/css/botoes.css">
+  <link rel="stylesheet" href="../../toaki-componentes-css/css/cards.css">
+  <link rel="stylesheet" href="../../toaki-componentes-css/css/imagem.css">
+  <link rel="stylesheet" href="../../toaki-componentes-css/css/icones.css">
+  <link rel="stylesheet" href="../../toaki-componentes-css/css/inputs.css">
+  <link rel="stylesheet" href="../../toaki-componentes-css/css/navbar.css">
   <link rel="stylesheet" href="./css/style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,6 +18,12 @@
 </head>
 <body>
 
+  
+  <div class="resolucao-mobile">
+    <div class="imagem-mobile">
+
+    </div>
+  </div>
 
 
   <script src="./script/script.js"></script>
