--- a/telas/vendedor-principal/base.html
+++ b/telas/vendedor-principal/base.html
@@ -19,8 +19,80 @@
 <body>
 
   
-  <div class="resolucao-mobile">
-    <div class="imagem-mobile">
+  <div class="resolucao">
+    <div class="imagem-web">
+
+      <div class="conteudo">
+
+        <div>
+          <nav class="navbar-desktop">
+            <div class="navbar-desktop-imagem">
+              <img src="../../toaki-componentes-css/image/logo-navbar.png" alt="">
+            </div>
+
+            <div class="navbar-desktop-secao-vazia">
+            </div>
+
+            <div class="navbar-desktop-icones">
+              <svg class="icone-tamanho-g icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round"></path>
+              </svg>
+              <svg class="icone-tamanho-g icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round"></path>
+              </svg>
+              <svg class="icone-tamanho-g icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round"></path>
+              </svg>
+            </div>
+          </nav>
+        </div>
+
+        <div class="painel">
+          <div class="painel-perfil">
+          </div>
+          <div class="painel-acoes">
+            <div class="painel-acoes-menu">
+              <a class="painel-acoes-menu-botao painel-acoes-menu-botao-ativo" href=""><span>Mapa</span></a>
+              <a class="painel-acoes-menu-botao" href="">Pedidos</a>
+              <a class="painel-acoes-menu-botao" href="">Vendas</a>
+              <a class="painel-acoes-menu-botao" href="">Produtos</a>
+              <a class="painel-acoes-menu-botao" href="">Avaliações</a>
+            </div>
+            <div class="painel-acoes-view">
+
+            </div>
+          </div>
+        </div>
+
+        <div class="painel-mobile">
+          <div class="painel-mobile-view">
+
+          </div>
+          <div class="container-navbar-mobile">
+            <nav class="navbar-mobile">
+              
+              <svg class="icone-tamanho-m icone-home icone-borda-ciano" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round"></path>
+              </svg>
+
+              <svg class="icone-tamanho-m icone-notas icone-borda-preta icone-preenchimento-preto" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round"></path>
+              </svg>
+              
+              <svg class="icone-tamanho-m icone-chat icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round"></path>
+              </svg>
+
+              <svg class="icone-tamanho-m icone-estrela icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round"></path>
+              </svg>
+
+            </nav>
+          </div>
+
+        </div>
+
+      </div>
 
     </div>
   </div>
