--- a/telas/cliente-tela-login/base.html
+++ b/telas/cliente-tela-login/base.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="../../toaki-componentes-css/css/global.css">
   <link rel="stylesheet" href="../../toaki-componentes-css/css/botoes.css">
   <link rel="stylesheet" href="../../toaki-componentes-css/css/cards.css">
@@ -14,12 +16,37 @@
   <link rel="stylesheet" href="./css/style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Insira o nome da tela aqui</title>
+  <title>Tela de login</title>
 </head>
+
 <body>
 
+  <div class="resolucao-pagina">
+    <nav class="navbar-desktop navbar-container">
+      <div class="navbar-desktop-imagem logo">
+        <img src="../../toaki-componentes-css/image/logo-mobile.png" alt="">
+      </div>
+      <div class="navbar-desktop-secao-vazia">
+      </div>
+      <div class="navbar-desktop-icones">
+        <svg class="icone-tamanho-g icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path stroke-linecap="round" stroke-linejoin="round"></path>
+        </svg>
+        <svg class="icone-tamanho-g icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path stroke-linecap="round" stroke-linejoin="round"></path>
+        </svg>
+        <svg class="icone-tamanho-g icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path stroke-linecap="round" stroke-linejoin="round"></path>
+        </svg>
+      </div>
+    </nav>
+  </div>
 
 
-  <script src="./script/script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
+
 </html>
