Feat: Atualização icones html

--- a/telas/cliente-principal/base.html
+++ b/telas/cliente-principal/base.html
@@ -22,8 +22,8 @@
             <nav class="navbar-desktop">
 
                 
-                <svg class="icone-tamanho-g icone-menu icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path stroke-linecap="round" stroke-linejoin="round"></path>
+                <svg class="icone-tamanho-gg icone-menu icone-borda-preto icone-preenchimento-amarelo" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke-linecap="round" stroke-linejoin="round" ></path>
                 </svg>
 
               <div class="navbar-desktop-imagem">
@@ -65,7 +65,7 @@
                 </svg>
 
                 
-                <svg class="icone-tamanho-g icone-usuario icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="icone-tamanho-g icone-usuario icone-borda-preta icone-com-fundo" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path stroke-linecap="round" stroke-linejoin="round"></path>
                 </svg>
 
