Butões de km sem CSS

--- a/telas/cliente-principal/base.html
+++ b/telas/cliente-principal/base.html
@@ -68,13 +68,26 @@
                 <svg class="icone-tamanho-g icone-usuario icone-borda-preta icone-com-fundo" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path stroke-linecap="round" stroke-linejoin="round"></path>
                 </svg>
-
+              </div>
               </nav>
             </nav> 
             </div>
           </div>
         </div>
   </div>
+           <div class="iconkm-container">
+
+                <button>1km</button>
+                <button>2km</button>
+                <button>3km</button>
+                <button>praia</button>
+                <button>coração</button>
+
+                <button class="round-btn">
+
+              </div>
+
+
   <script src="./script/script.js"></script>
 </body>
 </html>
