--- a/telas/cliente-principal/base.html
+++ b/telas/cliente-principal/base.html
@@ -53,18 +53,18 @@
              </div>
             </div>
 
-            <div class="iconkm-container">
-              <div class="button-container">
-                <button>1Km</button>
-              </div>
+              <div class="iconkm-container">
+                <div class="button-container">
+                  <button>1Km</button>
+                </div>
                 
-              <div class="button-container">
-                <button>
-                  <svg class="icone-tamanho-m icone-mapa icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round"></path>
-                  </svg>
-                </button>
-              </div>
+                <div class="button-container">
+                  <button>
+                    <svg class="icone-tamanho-m icone-mapa icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path stroke-linecap="round" stroke-linejoin="round"></path>
+                    </svg>
+                  </button>
+                </div>
                 <div class="button-container">
                   <button>
                     <svg class="icone-tamanho-m icone-coracao icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -72,6 +72,13 @@
                     </svg>
                   </button>
                 </div>
+              </div>
+              <div class="centralizar">
+                <button>
+                  <svg class="icone-tamanho-m icone-centralizar icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round"></path>
+                  </svg>
+                </button>
               </div>
           </div>
         </div>
