--- a/telas/vendedor-tela-login/base.html
+++ b/telas/vendedor-tela-login/base.html
@@ -103,6 +103,26 @@
   </form>
 </div>
 
+<div class="containerCriarSenha">
+  <form id="telaCriarSenha" class="ativo">
+
+  </form>
+</div>
+
+<div class="containerRecuperarSenhaEmail">
+  <form id="telaRecuperar" class="ativo">
+
+  </form>
+</div>
+
+<div class="containerRecuperarSenha">
+  <form id="telaRecuperar" class="ativo">
+
+  </form>
+</div>
+
+
+
 <script src="./js/script.js"></script>
 </body>
 </html>
