--- a/telas/vendedor-tela-login/base.html
+++ b/telas/vendedor-tela-login/base.html
@@ -21,7 +21,7 @@
 
 <body>
 
-<div class="controle-o-tamanho-da-navbar-desktop-por-essa-div">
+<div class="navbar-tamanho">
 <nav class="navbar-desktop">
 <div class="navbar-desktop-imagem">
 <img src="../../toaki-componentes-css/image/logo-navbar.png" alt="">
@@ -70,7 +70,8 @@
 
     <div class="botaoCentral">
         <button class="botao-grande botao-geral-ciano" type="submit">Entrar</button>
-    </div>  
+    </div>
+  
 
     <div class="labelDesign">
       <div class="linhaDesign"></div>
@@ -99,23 +100,6 @@
   </form>
 </div>
 
-<div class="containerCriarSenha">
-  <form id="telaCriarSenha" class="ativo">
-
-  </form>
-</div>
-
-<div class="containerRecuperarSenhaEmail">
-  <form id="telaRecuperar" class="ativo">
-
-  </form>
-</div>
-
-<div class="containerRecuperarSenha">
-  <form id="telaRecuperar" class="ativo">
-
-  </form>
-</div>
 
 
 
