Finalização da tela desktop e mobile

--- a/telas/cliente-principal/base.html
+++ b/telas/cliente-principal/base.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="button-container">
                   <button>
-                    <svg class="icone-tamanho-m icone-coracao icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="icone-tamanho-m icone-coracao icone-borda-preta icone-preenchimento-preto" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path stroke-linecap="round" stroke-linejoin="round"></path>
                     </svg>
                   </button>
@@ -80,7 +80,29 @@
                   </svg>
                 </button>
               </div>
+              <div class="mobile-nav">
+              <div class="controle-o-tamanho-da-navbar-por-essa-div">
+            <nav class="navbar-mobile">
+                <svg class="icone-tamanho-m icone-home icone-borda-preta icone-preenchimento-preto" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg>
+                <svg class="icone-tamanho-m icone-lupa icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg>
+                <svg class="icone-tamanho-m icone-chat icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg>
+                <svg class="icone-tamanho-m icone-tag icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg>
+
+            </nav>
           </div>
+          </div>
+          </div>
+          
+          
+
         </div>
       </div>
   </div>
