--- a/telas/cliente-tela-login/base.html
+++ b/telas/cliente-tela-login/base.html
@@ -66,9 +66,9 @@
        </div> 
         <div class="social-login">
            <button type="button" class="btn-social btn-google"> 
-            <img src="" alt="Login com Google"> 
-          </button> <button type="button" class="btn-social btn-facebook"> <img src="" alt="Login com Facebook"> 
-          </button> <button type="button" class="btn-social btn-twitter"> <img src="" alt="Login com Twitter"> </button>
+            <img src="/telas/cliente-tela-login/img/pesquisa.png" alt="Login com Google"> 
+          </button> <button type="button" class="btn-social btn-facebook"> <img src="/telas/cliente-tela-login/img/facebook.png" alt="Login com Facebook"> 
+          </button> <button type="button" class="btn-social btn-twitter"> <img src="/telas/cliente-tela-login/img/twitter.png" alt="Login com Twitter"> </button>
          </div>
    <div class="cadastroVendedor">
      <p>Não tem conta?
