--- a/telas/cliente-editar-perfil/menu_perfil.html
+++ b/telas/cliente-editar-perfil/menu_perfil.html
@@ -17,14 +17,37 @@
   <title>Insira o nome da tela aqui</title>
 </head>
 <body>  
+    <div class="resolucao">
+        <div class="imagem-web">
+            <div class="">
+                <div class="navbar-margin">
+                    <nav class="navbar-desktop">
+                        <div class="navbar-desktop-imagem">
+                            <img src="../../toaki-componentes-css/image/logo-navbar.png" alt="">
+                        </div>
+
+                        <div class="navbar-desktop-secao-vazia">
+                        </div>
+
+                        <div class="navbar-desktop-icones">
+                            <svg class="icone-tamanho-g icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round"></path>
+                            </svg>
+                            <svg class="icone-tamanho-g icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round"></path>
+                            </svg>
+                            <svg class="icone-tamanho-g icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round"></path>
+                            </svg>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </div> 
+  
     
-    <div class="resolucao-web">
-    <div class="imagem-web">
-    </div>
-    </div>
-
-
-
+    
 
   <script src="./script/script.js"></script>
 </body>
