--- a/telas/cliente-principal/base.html
+++ b/telas/cliente-principal/base.html
@@ -53,6 +53,15 @@
              </div>
             </div>
 
+            <div class="user">
+              <div class="icone-user"> 
+                <svg class="icone-tamanho-g icone-usuario icone-borda-preta " viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                 <path stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg>
+              </div>
+              <span class="user-name"> Olá, nome</span>
+            </div>
+
               <div class="iconkm-container">
                 <div class="button-container">
                   <button>1Km</button>
