--- a/telas/vendedor-tela-login/Login-Desktop/novaSenhaDesktop.html
+++ b/telas/vendedor-tela-login/Login-Desktop/novaSenhaDesktop.html
@@ -34,69 +34,33 @@
 <svg class="icone-tamanho-g icone-usuario icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path stroke-linecap="round" stroke-linejoin="round"></path>
 </svg>
-<svg class="icone-tamanho-g icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path stroke-linecap="round" stroke-linejoin="round"></path>
-</svg>
-<svg class="icone-tamanho-g icone-retorno icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path stroke-linecap="round" stroke-linejoin="round"></path>
-</svg>
-</div>
 
 </nav>
 </div>
 
+<div>
+  <button class="botao-ciano-pequeno botao-geral-ciano">Voltar</button>
+</div>
 
 <div class="containerLogin">
   <form id="telaLogin" class="ativo">
-    <h2>Entrar</h2>
+    <h2>Nova Senha</h2>
 
     <div class="rotulo-entrada">
-      <label class="rotulo-desktop" for="email">E-mail</label>
-      <input class="entrada-desktop" type="text" id="email" placeholder="Ex: joaosilva@exemplo.com.br">
-    </div>
-
-    <div class="rotulo-entrada">
-      <label class="rotulo-desktop" for="senha">Senha</label>
+      <label class="rotulo-desktop" for="senha">Nova Senha</label>
       <input class="entrada-desktop" type="password" id="senha" placeholder="Ex: MinhaSenhaForte123!">
     </div>
 
-    <div class="checkbox">
-      <div class="lembrar">
-        <input type="checkbox" id="remember" name="remember">
-        <label for="remember">Lembrar senha</label>
-      </div>
-      <a href="#" class="link-esqueci">Esqueci minha senha</a>
+    <div class="rotulo-entrada">
+      <label class="rotulo-desktop" for="senha">Confirmar Senha</label>
+      <input class="entrada-desktop" type="password" id="senha" placeholder="Ex: MinhaSenhaForte123!">
     </div>
+
 
     <div class="botaoCentral">
-        <button class="botao-grande botao-geral-ciano" type="submit">Entrar</button>
+        <button class="botao-grande botao-geral-ciano" type="submit">Confirmar</button>
     </div>
   
-
-    <div class="labelDesign">
-      <div class="linhaDesign"></div>
-      <div class="label-textoDesign">Entrar com</div>
-      <div class="linhaDesign"></div>
-    </div>
-
-    <!-- Login social -->
-    <div class="social-login">
-      <button type="button" class="btn-social btn-google">
-        <img src="" alt="Login com Google">
-      </button>
-
-      <button type="button" class="btn-social btn-facebook">
-        <img src="" alt="Login com Facebook">
-      </button>
-
-      <button type="button" class="btn-social btn-twitter">
-        <img src="" alt="Login com Twitter">
-      </button>
-    </div>
-
-    <div class="cadastroVendedor">
-      <p>Não tem conta? <a href="#">Cadastre-se</a></p>
-    </div>
   </form>
 </div>
 
