--- a/telas/vendedor-tela-login/Login-Desktop/recuperarSenhaEmailDesktop.html
+++ b/telas/vendedor-tela-login/Login-Desktop/recuperarSenhaEmailDesktop.html
@@ -47,14 +47,15 @@
 
 
 <div class="containerLogin">
-  <form id="telaLogin" class="ativo">
+  <form id="telaRecuperacaoSenha" class="ativo">
+    <!--Alterar esse titulo de "Entrar" para "Recuperar Senha"-->
     <h2>Entrar</h2>
-
+    <!--Aqui você vai criar um <h3>Digite seu e-mail para recuperar a senha</h3>-->
     <div class="rotulo-entrada">
       <label class="rotulo-desktop" for="email">E-mail</label>
       <input class="entrada-desktop" type="text" id="email" placeholder="Ex: joaosilva@exemplo.com.br">
     </div>
-
+    <!--Você vai começar apagando daqui-->
     <div class="rotulo-entrada">
       <label class="rotulo-desktop" for="senha">Senha</label>
       <input class="entrada-desktop" type="password" id="senha" placeholder="Ex: MinhaSenhaForte123!">
@@ -67,12 +68,13 @@
       </div>
       <a href="#" class="link-esqueci">Esqueci minha senha</a>
     </div>
-
+    <!--Até aqui-->
+    <!--Aqui você vai mudar o nome de "Entrar" para "Enviar"-->
     <div class="botaoCentral">
         <button class="botao-grande botao-geral-ciano" type="submit">Entrar</button>
     </div>
   
-
+    <!--Começar apagar daqui-->
     <div class="labelDesign">
       <div class="linhaDesign"></div>
       <div class="label-textoDesign">Entrar com</div>
@@ -97,6 +99,7 @@
     <div class="cadastroVendedor">
       <p>Não tem conta? <a href="#">Cadastre-se</a></p>
     </div>
+    <!--Até aqui-->
   </form>
 </div>
 
