feat: alterações na tela de recuperar senha

--- a/telas/vendedor-tela-login/Login-Desktop/recuperarSenhaEmailDesktop.html
+++ b/telas/vendedor-tela-login/Login-Desktop/recuperarSenhaEmailDesktop.html
@@ -48,58 +48,18 @@
 
 <div class="containerLogin">
   <form id="telaRecuperacaoSenha" class="ativo">
-    <!--Alterar esse titulo de "Entrar" para "Recuperar Senha"-->
-    <h2>Entrar</h2>
-    <!--Aqui você vai criar um <h3>Digite seu e-mail para recuperar a senha</h3>-->
+    <h2>Recuperar Senha</h2>
+    <h3>Digite seu email para recuperar a senha</h3>
     <div class="rotulo-entrada">
       <label class="rotulo-desktop" for="email">E-mail</label>
       <input class="entrada-desktop" type="text" id="email" placeholder="Ex: joaosilva@exemplo.com.br">
     </div>
-    <!--Você vai começar apagando daqui-->
-    <div class="rotulo-entrada">
-      <label class="rotulo-desktop" for="senha">Senha</label>
-      <input class="entrada-desktop" type="password" id="senha" placeholder="Ex: MinhaSenhaForte123!">
-    </div>
-
-    <div class="checkbox">
-      <div class="lembrar">
-        <input type="checkbox" id="remember" name="remember">
-        <label for="remember">Lembrar senha</label>
-      </div>
-      <a href="#" class="link-esqueci">Esqueci minha senha</a>
-    </div>
-    <!--Até aqui-->
-    <!--Aqui você vai mudar o nome de "Entrar" para "Enviar"-->
+    
     <div class="botaoCentral">
-        <button class="botao-grande botao-geral-ciano" type="submit">Entrar</button>
+        <button class="botao-grande botao-geral-ciano" type="submit">Enviar</button>
     </div>
   
-    <!--Começar apagar daqui-->
-    <div class="labelDesign">
-      <div class="linhaDesign"></div>
-      <div class="label-textoDesign">Entrar com</div>
-      <div class="linhaDesign"></div>
-    </div>
-
-    <!-- Login social -->
-    <div class="social-login">
-      <button type="button" class="btn-social btn-google">
-        <img src="" alt="Login com Google">
-      </button>
-
-      <button type="button" class="btn-social btn-facebook">
-        <img src="" alt="Login com Facebook">
-      </button>
-
-      <button type="button" class="btn-social btn-twitter">
-        <img src="" alt="Login com Twitter">
-      </button>
-    </div>
-
-    <div class="cadastroVendedor">
-      <p>Não tem conta? <a href="#">Cadastre-se</a></p>
-    </div>
-    <!--Até aqui-->
+    
   </form>
 </div>
 
