--- a/telas/cliente-editar-perfil/menu-perfil.html
+++ b/telas/cliente-editar-perfil/menu-perfil.html
@@ -31,14 +31,13 @@
                         </div>
 
                         <div class="navbar-desktop-icones">
-                            
-                            <svg class="icone-tamanho-m icone-sino icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg class="icone-tamanho-g icone-sino icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path stroke-linecap="round" stroke-linejoin="round"></path>
-                            </svg>
-                            <svg class="icone-tamanho-m icone-chat icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            </svg>                                                   
+                            <svg class="icone-tamanho-g icone-chat icone-borda-preta" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path stroke-linecap="round" stroke-linejoin="round"></path>
-                            </svg>
-                            <svg class="icone-tamanho-m icone-usuario icone-borda-ciano" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            </svg> 
+                            <svg class="icone-tamanho-g icone-usuario icone-borda-ciano" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path stroke-linecap="round" stroke-linejoin="round"></path>
                             </svg>
                         </div>
