--- a/telas/vendedor-tela-login/loginDesktop.html
+++ b/telas/vendedor-tela-login/loginDesktop.html
@@ -18,12 +18,12 @@
   
     <style>
     :root {
-  --raio-login: 30px;
-  --titulo-criar-conta: 48px "Montserrat", sans-serif #000000ba;
-  --font-Regular: 400;
-  --font-Medium: 500;
-  --font-SemiBold: 600;  
-  }
+    --raio-login: 30px;
+    --font-light: 300;
+    --font-Regular: 400;
+    --font-Medium: 500;
+    --font-SemiBold: 600;  
+    }
   
   .containerLogin {
   width: 100%;
