feat: adicionando os containers de produtos

--- a/telas/vendedor-produtos/base.html
+++ b/telas/vendedor-produtos/base.html
@@ -66,21 +66,24 @@
               <h1>Meus Produtos</h1>
 
               <div class="pesquisa-acoes">
-                <div class="entrada-container">
+                
+                <div class="entrada-container-filtro">
                   <input type="text" placeholder="Buscar" class="texto-entrada-absoluto">
                   <svg class="icone-tamanho-m icone-lupa icone-borda-preta entrada-icone-absoluto" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path stroke-linecap="round" stroke-linejoin="round"></path>
                 </svg>
                 </div>
               </div>
-
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
-              
+              <div class="container-produtos">  
+                <div class="item">teste</div>
+                <div class="item">teste</div>
+                <div class="item">tete</div>
+              </div>
+              <div class="container-produtos">  
+                <div class="item">teste</div>
+                <div class="item">teste</div>
+                <div class="item">tete</div>
+              </div>
 
               </div>
             </div>
